2007-11-29  Michael Hutchinson <mhutchinson@novell.com> 

	* Gui/CompilerOptionsPanelWidget.cs: Load existing LangVersion value.

2007-11-23  Andreia Gaita <avidigal@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: When a comma is typed in a method call,
	check that code completion is active before calling it

2007-11-22  Michael Hutchinson <mhutchinson@novell.com> 

	* CSharpLanguageBinding.cs: Add support for 2.1 profile.
	* Gui/ChooseRuntimePanel.cs: Unused; delete.
	* Gui/CodeGenerationPanel.cs, Gui/CompilerOptionsPanelWidget.cs,
	  gtk-gui/CSharpBinding.CodeGenerationPanelWidget.cs,
	  gtk-gui/CSharpBinding.CompilerOptionsPanelWidget.cs: Add support for
	  LangVersion and AdditionalArgs. Move options from per-config to
	  per-project.
	* CSharpBinding.addin.xml, CSharpBinding.mdp, gtk-gui/objects.xml,
	  gtk-gui/gui.stetic, Makefile.am: Updated.
	* Autotools/CSharpAutotoolsSetup.cs: Add support for 2.1 profile, additional
	  args and langversion.
	* CSharpBindingCompilerManager.cs: Add support for 2.1 profile, additional
	  args, nowarn and langversion.
	* Project/CSharpCompilerParameters.cs: Add support for LangVersion and
	  AdditionalArgs.

2007-11-21  Lluis Sanchez Gual <lluis@novell.com> 

	* Project/CSharpCompilerParameters.cs: Removed some obsolete attributes.

2007-11-20  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am: Fix distcheck by disabling automatic running of unit 
	  tests in check target, as their running is somewhat broken.

2007-11-19  Michael Hutchinson <mhutchinson@novell.com> 

	* CSharpEnhancedCodeProvider.cs: Use non-obsolete APIs.
	* Parser/CodeGenerator.cs: Track API change.

2007-11-19  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Fix invalid cast. Fixes bug #342607.

2007-11-16  Michael Hutchinson <mhutchinson@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Fix "Bug 342124 - Tab should indent,
	  regardless of the position of the cursor", as its behaviour was